implemented frational indexing to reorder stories
